--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -28,3 +28,6 @@ directories:
   output: release/build
 extraResources:
   - "./assets/**"
+# build:
+#   afterPack: "./removeLocales.js"
+afterPack: "./removeLocales.js"
