--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt-on-cs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "多平台智能客服，允许使用 ChatGPT 作为客服机器人",
   "license": "AGPL-3.0",
   "author": {
@@ -13,6 +13,8 @@
     "rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
     "postinstall": "pnpm run rebuild && pnpm run link-modules",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
-  },  
-  "dependencies": {}
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.6"
+  }
 }
