--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatgpt-on-cs",
   "description": "多平台智能客服，允许使用 ChatGPT 作为客服机器人",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "keywords": [
     "electron",
     "boilerplate",
@@ -101,15 +101,32 @@
     "@emotion/styled": "^11.11.0",
     "@hw-hmscore/analytics-web": "6.9.9-301",
     "@tanstack/react-query": "4.36.1",
+    "ansi-styles": "^6.2.1",
     "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "dottie": "^2.0.6",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.4",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "framer-motion": "^11.0.3",
     "immer": "^10.0.3",
+    "inflection": "^3.0.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^7.18.3",
+    "luxon": "^3.4.4",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "ms": "^2.1.3",
     "net": "^1.0.2",
     "node-cron": "^3.0.3",
+    "openai": "^4.38.3",
+    "pg-connection-string": "^2.6.4",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -118,8 +135,19 @@
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
     "react-use-websocket": "^4.8.1",
+    "reflect-metadata": "^0.2.2",
     "remark-gfm": "^4.0.0",
+    "retry-as-promised": "^7.0.4",
+    "semver": "^7.6.0",
+    "sequelize": "^6.37.3",
+    "sequelize-pool": "^8.0.0",
+    "socket.io": "^4.7.5",
     "source-map-support": "^0.5.21",
+    "toposort-class": "^1.0.1",
+    "tslib": "^2.6.2",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
+    "wkx": "^0.5.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -130,15 +158,21 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.5",
+    "@types/luxon": "^3.4.2",
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.1",
+    "@types/source-map-support": "^0.5.10",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "app-builder-lib": "25.0.0-alpha.6",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "concurrently": "^8.2.1",
@@ -149,8 +183,9 @@
     "detect-port": "^1.5.1",
     "dotenv": "^16.4.4",
     "electron": "^26.2.1",
-    "electron-builder": "^24.6.4",
+    "electron-builder": "^24.13.3",
     "electron-devtools-installer": "^3.2.0",
+    "electron-rebuild": "^3.2.9",
     "electronmon": "^2.0.2",
     "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -170,6 +205,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "node-addon-api": "file:C:/Users/33204/Documents/project/alsritter.icu/lazy-rap-web/tmp/node-addon-api",
     "prettier": "^3.0.3",
     "prettier-eslint": "^16.3.0",
     "react-refresh": "^0.14.0",
@@ -177,12 +213,14 @@
     "rimraf": "^5.0.1",
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
+    "sqlite3": "^5.1.7",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typeorm": "^0.3.20",
     "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
