feat: 优化各个平台的独立配置功能；添加关闭自动回复，只使用关键词回复的功能；添加延时随机时间

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@emotion/styled": "^11.11.0",
     "@hw-hmscore/analytics-web": "6.9.9-301",
     "@tanstack/react-query": "4.36.1",
+    "@types/lodash": "^4.17.1",
     "ansi-styles": "^6.2.1",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
