--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt-on-cs",
-  "version": "1.0.4",
+  "version": "1.0.5-beta",
   "description": "多平台智能客服，允许使用 ChatGPT 作为客服机器人",
   "license": "AGPL-3.0",
   "author": {
