--- a/package.json
+++ b/package.json
@@ -92,15 +92,13 @@
     }
   },
   "dependencies": {
-    "@agconnect/api": "^1.3.2",
-    "@agconnect/instance": "^1.3.2",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@hw-hmscore/analytics-web": "6.9.9-301",
     "@tanstack/react-query": "4.36.1",
+    "@vercel/analytics": "^1.3.1",
     "ansi-styles": "^6.2.1",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
@@ -130,6 +128,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
