--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@monaco-editor/react": "^4.6.0",
     "@tanstack/react-query": "4.36.1",
     "@vercel/analytics": "^1.3.1",
     "ansi-styles": "^6.2.1",
@@ -120,6 +121,7 @@
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "monaco-editor": "^0.49.0",
     "ms": "^2.1.3",
     "net": "^1.0.2",
     "node-cron": "^3.0.3",
