--- a/package.json
+++ b/package.json
@@ -135,8 +135,10 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
     "react-use-websocket": "^4.8.1",
     "reflect-metadata": "^0.2.2",
     "remark-gfm": "^4.0.0",
@@ -170,6 +172,7 @@
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-table": "^7.7.20",
     "@types/react-test-renderer": "^18.0.1",
     "@types/source-map-support": "^0.5.10",
     "@types/terser-webpack-plugin": "^5.0.4",
